<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdRegistrationFragment">

    <TextView
        android:id="@+id/txt_adName"
        style="@style/textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_ad_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp" />

    <EditText
        android:id="@+id/edt_name_client"
        style="@style/textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint_client"
        app:layout_constraintTop_toBottomOf="@+id/text_client"/>

    <CalendarView
        android:id="@+id/calendarView"
        style="@style/textBox"
        android:layout_width="343dp"
        android:layout_height="310dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_calendar" />

    <EditText
        android:id="@+id/edt_investment_day"
        style="@style/textBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint_investment_day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_investment_day"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <EditText
        android:id="@+id/edt_ad_name"
        style="@style/textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint_ad_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_adName" />

    <TextView
        android:id="@+id/text_client"
        style="@style/textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_client"
        app:layout_constraintTop_toBottomOf="@+id/edt_ad_name"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/text_calendar"
        style="@style/textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_calendar"
        app:layout_constraintTop_toBottomOf="@+id/edt_name_client"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/txt_investment_day"
        style="@style/textBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:text="Investment for day:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edt_investment_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

</androidx.constraintlayout.widget.ConstraintLayout>